# chinese-medical-kg

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.cn  Docker部署指南.md  README.md  README_EN.md  data_sources_recommendation.md  docker-compose.cn.yml  docker-compose.prod.yml  docker-compose.yml  docker_deployment_guide.md  example_ontology_usage.py  kg_query_db.py  pyproject.toml  quick_start.sh  requirements-dev.txt  requirements.txt  restart_api.sh  setup.py  simple_example.py  uv_setup.sh  快速开始.sh  示例_ontology使用.py
.docker/: pip.conf
data/: 国家药品编码本位码信息（进口药品）.xlsx
data/ttd/: 下载说明.txt
docs/: API.md
ontology/: README.md  __init__.py  db_loader.py  entity_linker.py
ontology/data/: .gitkeep  README.md
scripts/: add_generic_name_to_db.py  build_ontology.py  download_ttd_data.sh  extract_generic_names.py  kg_cli.py  merge_ontology.py  migrate_to_sqlite.py  parse_official_medical_excel.py  parse_real_medical_data.py  parse_ttd_data.py  test_unified_kg.py  verify_ttd_data.py
src/: __init__.py
src/api/: __init__.py  generic_name.py  main.py
src/core/: __init__.py  entity_linker.py  ontology_loader.py
src/parsers/: __init__.py  parse_icd.py
tests/: test_entity_linker.py
utils/: logger.py
